# flask-student-service

./: Dockerfile  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  seed.py
src/controllers/: student_controller.py
src/database/: db.py
src/models/: abstract_model.py  student_model.py
tests/: conftest.py
tests/controller/: test_create_student.py  test_delete_student.py  test_get_all.py  test_get_by_enrollment.py  test_update_student.py
tests/model/: test_collection.py  test_init_and_to_dict.py  test_update.py
