[project]
name = "flask_exercise"
version = "0.1.0"
description = "Exercício de Flask"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
addopts = "-vv -s"
accept_xfail = true
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
pythonpath = ["src"]
env = ["DB_NAME = test_db_flask_exercise"]